Fixed footer spacing. Fixed some links.

--- a/src/css/utils/components.css
+++ b/src/css/utils/components.css
@@ -328,7 +328,7 @@ body.navbar-open {
 
 .footer-desktop,
 .footer-mobile {
-  margin-top: 80px;
+  margin-top: 10px;
   width: 100%;
   text-align: right;
 }
